# associme

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  flake.nix  package-lock.json  package.json  paseto_private  paseto_public
.sqlx/: query-1b7bb9e2e2665f6bf1a1fc6b5e38202733c3bcf4520e1056f2e28fe882c68ecd.json  query-2b56b4e78febd50130e465d1cd18570634d1c808648698002886094f6bc89679.json  query-43ecd349200f628332762a9a5c66afa80bf7da9029379675528176b704b1023c.json  query-461754105aecddd27abafdcf416a43e9841b0dfcaac34881c6a58954a127ca74.json  query-5b17f13aac25a14ba191f84b1122b214003bb26b4f00c815c1a9813aef593e8f.json  query-67ad8f28ad954425c9e6843dbeac5d4820dcdf84a457a570da30173a48f4486a.json  query-6ada6cb88d41c9787608af33826a9be8d30ee5f87dc4473d84bbdee27269b20b.json  query-8085d80f1851e61edc1936bbb7e320b788b007abd0fc233734d08cb56bc7b4c1.json  query-82f3dfdf2304001308c87707559f215e117e2d19cc73161c71314dfe48a15485.json  query-9776b66140d9371d18052b1318d26c0a0d7f42ef33f8ae3a3bc866816bf735aa.json  query-ac8c25b7d9de51cae4f350ebfb56110cb2cbbca4f09e0d5f0756f5a7346a5898.json  query-db1ecad52b74b5800cebdaf937125e4ff1c115dbf979258e64cdc990e7443faa.json  query-deee4c4be7590e4c3e34174e3e0c71de1d16b8f0524169076dcd51cd6613e4df.json  query-e0ad7f9607c2ad11720a4926912e3aae438ae2de70e3694c4775ae07ddca4fff.json  query-f955ee61ceab5f963d96c510c789d1ec6c57f898ea97ee5d1589bd0ca8d1fb6d.json  query-fdbe13341de2a6a74547ef9f49d471f65587d3a6e2805f2a73f57d5598311a3d.json
frontend/: angular.json  package-lock.json  package.json
migrations/: 20241226195844_accounts.down.sql  20241226195844_accounts.up.sql  20250113183058_members.down.sql  20250113183058_members.up.sql
src/: errors.rs  lib.rs  main.rs
(+61 files in other folders)
