[package]
name = "associme"
authors = ["itsscb <dev@itsscb.de>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.9"
chrono = "0.4.39"
pasetors = "0.7.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = "1.42.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }
