[package]
name = "associme"
authors = ["itsscb <dev@itsscb.de>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.39"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
paseto_maker = "0.2.1"
pasetors = "0.7.1"
rand = "0.8.5"
rusty_paseto = { version = "0.7.2", features = [
    "batteries_included",
    "v4_public",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.9"
tokio = "1.42.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }
